crates/ktsense-cli/tests/snapshots/partial_outline__json__declaration_then_callable_reference.snap
---
source: crates/ktsense-cli/tests/partial_outline.rs
expression: record
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "declaration-then-callable-reference.gap.kt",
  "declarations": [
    {
      "kind": "function",
      "name": "call",
      "line": 1
    }
  ],
  "partial": true
}
