crates/ktsense-cli/tests/snapshots/partial_outline__json__parenthesized_expression_statement.snap
---
source: crates/ktsense-cli/tests/partial_outline.rs
expression: record
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "parenthesized-expression-statement.gap.kt",
  "declarations": [
    {
      "kind": "function",
      "name": "call",
      "line": 1,
      "parameters": [
        {
          "name": "action",
          "type_name": "() -> Unit"
        }
      ]
    }
  ],
  "partial": true
}
